Apply suggestion
Co-authored-by: Lukas Pradel <lukas.pradel@googlemail.com>